--- a/package.json
+++ b/package.json
@@ -13,24 +13,24 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@types/eslint": "^8.56.0",
-		"eslint": "^8.56.0",
+		"@playwright/test": "^1.41.2",
+		"@sveltejs/adapter-auto": "^3.1.1",
+		"@sveltejs/kit": "^2.5.1",
+		"@sveltejs/vite-plugin-svelte": "^3.0.2",
+		"@types/eslint": "^8.56.3",
+		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
-		"svelte": "^4.2.7",
-		"vite": "^5.0.3",
-		"vitest": "^1.2.0"
+		"prettier": "^3.2.5",
+		"prettier-plugin-svelte": "^3.2.1",
+		"svelte": "^4.2.12",
+		"vite": "^5.1.4",
+		"vitest": "^1.3.1",
+		"sass": "^1.71.1"
 	},
 	"type": "module",
 	"dependencies": {
 		"@fontsource-variable/space-grotesk": "^5.0.16",
-		"@fontsource/space-mono": "^5.0.18",
-		"sass": "^1.71.1"
+		"@fontsource/space-mono": "^5.0.18"
 	}
 }
