--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
+		"mdsvex": "^0.11.0",
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.1",
+		"sass": "^1.71.1",
 		"svelte": "^4.2.12",
 		"vite": "^5.1.4",
-		"vitest": "^1.3.1",
-		"sass": "^1.71.1"
+		"vitest": "^1.3.1"
 	},
 	"type": "module",
 	"dependencies": {
