--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"devDependencies": {
 		"@playwright/test": "^1.41.2",
 		"@sveltejs/adapter-auto": "^3.1.1",
+		"@sveltejs/enhanced-img": "^0.1.8",
 		"@sveltejs/kit": "^2.5.1",
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
 		"@types/eslint": "^8.56.3",
