--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
+		"@iconify-json/ph": "^1.1.11",
 		"@playwright/test": "^1.42.1",
 		"@sveltejs/adapter-auto": "^3.1.1",
 		"@sveltejs/enhanced-img": "^0.1.8",
@@ -27,6 +28,7 @@
 		"prettier-plugin-svelte": "^3.2.2",
 		"sass": "^1.71.1",
 		"svelte": "^4.2.12",
+		"unplugin-icons": "^0.18.5",
 		"vite": "^5.1.6",
 		"vitest": "^1.3.1"
 	},
@@ -34,6 +36,7 @@
 	"dependencies": {
 		"@fontsource-variable/space-grotesk": "^5.0.17",
 		"@fontsource/space-mono": "^5.0.19",
-		"embla-carousel-svelte": "^8.0.0"
+		"embla-carousel-svelte": "^8.0.0",
+		"iconify-icon": "^2.0.0"
 	}
 }
