--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"@fontsource-variable/space-grotesk": "^5.0.17",
 		"@fontsource/space-mono": "^5.0.19",
 		"embla-carousel-svelte": "^8.0.0",
-		"iconify-icon": "^2.0.0"
+		"iconify-icon": "^2.0.0",
+		"lottie-web": "^5.12.2"
 	}
 }
