--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
 	"devDependencies": {
 		"@iconify-json/ph": "^1.1.11",
 		"@playwright/test": "^1.42.1",
-		"@sveltejs/adapter-auto": "^3.2.0",
-		"@sveltejs/adapter-vercel": "^5.2.0",
+		"@sveltejs/adapter-static": "^3.0.1",
 		"@sveltejs/enhanced-img": "^0.2.0",
 		"@sveltejs/kit": "^2.5.5",
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
