--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@fontsource-variable/space-grotesk": "^5.0.17",
     "@fontsource/space-mono": "^5.0.19",
+    "@sveltejs/adapter-auto": "^3.2.0",
     "embla-carousel-svelte": "^8.0.1",
     "iconify-icon": "^2.0.0",
     "lottie-web": "^5.12.2",
