--- a/package.json
+++ b/package.json
@@ -1,44 +1,45 @@
 {
-  "name": "personal",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "test": "npm run test:integration && npm run test:unit",
-    "lint": "prettier --check . && eslint .",
-    "format": "prettier --write .",
-    "test:integration": "playwright test",
-    "test:unit": "vitest"
-  },
-  "devDependencies": {
-    "@iconify-json/ph": "^1.1.12",
-    "@playwright/test": "^1.43.0",
-    "@sveltejs/adapter-static": "^3.0.1",
-    "@sveltejs/enhanced-img": "^0.2.0",
-    "@sveltejs/kit": "^2.5.5",
-    "@sveltejs/vite-plugin-svelte": "^3.0.2",
-    "@types/eslint": "^8.56.7",
-    "eslint": "^9.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.36.0",
-    "mdsvex": "^0.11.0",
-    "prettier": "^3.2.5",
-    "prettier-plugin-svelte": "^3.2.2",
-    "sass": "^1.74.1",
-    "svelte": "^4.2.12",
-    "unplugin-icons": "^0.18.5",
-    "vite": "^5.2.8",
-    "vitest": "^1.4.0"
-  },
-  "type": "module",
-  "dependencies": {
-    "@fontsource-variable/space-grotesk": "^5.0.17",
-    "@fontsource/space-mono": "^5.0.19",
-    "embla-carousel-svelte": "^8.0.1",
-    "iconify-icon": "^2.0.0",
-    "lottie-web": "^5.12.2",
-    "shiki": "^1.3.0"
-  }
+	"name": "personal",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"test": "npm run test:integration && npm run test:unit",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write .",
+		"test:integration": "playwright test",
+		"test:unit": "vitest",
+		"deploy": "vercel build --prod && vercel deploy --prebuilt --prod"
+	},
+	"devDependencies": {
+		"@iconify-json/ph": "^1.1.12",
+		"@playwright/test": "^1.43.0",
+		"@sveltejs/adapter-static": "^3.0.1",
+		"@sveltejs/enhanced-img": "^0.2.0",
+		"@sveltejs/kit": "^2.5.5",
+		"@sveltejs/vite-plugin-svelte": "^3.0.2",
+		"@types/eslint": "^8.56.7",
+		"eslint": "^9.0.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.36.0",
+		"mdsvex": "^0.11.0",
+		"prettier": "^3.2.5",
+		"prettier-plugin-svelte": "^3.2.2",
+		"sass": "^1.74.1",
+		"svelte": "^4.2.12",
+		"unplugin-icons": "^0.18.5",
+		"vite": "^5.2.8",
+		"vitest": "^1.4.0"
+	},
+	"type": "module",
+	"dependencies": {
+		"@fontsource-variable/space-grotesk": "^5.0.17",
+		"@fontsource/space-mono": "^5.0.19",
+		"embla-carousel-svelte": "^8.0.1",
+		"iconify-icon": "^2.0.0",
+		"lottie-web": "^5.12.2",
+		"shiki": "^1.3.0"
+	}
 }
